tests/exec/assert-nil.stderr
At line 1.1 Assertion nil

Error occurred.
