tests/exec/assert-nil.exec
cmd: load assert-nil.ecl
status: 1
